@@ -128,7 +128,11 @@ public abstract boolean uploadUsingPreferences(String buildPath, String classNam
 
       if (Base.isMacOS()) {
         String envp[] = { "DYLD_LIBRARY_PATH=" + Base.getHardwarePath() + "/tools/msp430/mspdebug" };
-        process = Runtime.getRuntime().exec(commandArray, envp);
+        ProcessBuilder builder = new ProcessBuilder(commandArray);
+        builder.directory(new File(Base.getLM4FBasePath()));
+        process = builder.start();
+
+        //process = Runtime.getRuntime().exec(commandArray, envp);
       } else if(Base.isLinux()) {
         String envp[] = { "LD_LIBRARY_PATH=" + Base.getHardwarePath() + "/tools/msp430/bin" };
         process = Runtime.getRuntime().exec(commandArray, envp);
@@ -208,7 +212,11 @@ public abstract boolean uploadUsingPreferences(String buildPath, String classNam
 
 		      if (Base.isMacOS()) {
 		        String envp[] = { "DYLD_LIBRARY_PATH=" + Base.getHardwarePath() + "/tools/msp430/mspdebug" };
-		        process = Runtime.getRuntime().exec(commands, envp);
+		        ProcessBuilder builder = new ProcessBuilder(commands);
+		        builder.directory(new File(Base.getLM4FBasePath()));
+		        process = builder.start();
+		        
+		        //process = Runtime.getRuntime().exec(commands, envp);
 		      } else if(Base.isLinux()) {
 		        String envp[] = { "LD_LIBRARY_PATH=" + Base.getHardwarePath() + "/tools/msp430/bin" };
 		        process = Runtime.getRuntime().exec(commands, envp);
